FOF 3.4.6
================================================================================
+ Classic toolbars now correctly support drop-down menus in Joomla 4
~ Updated Assertions mixin
~ Work towards future PHP 7.4 support
# [LOW] FEFHelperSelect::booleanlist would not automatically style the radio list for switch display

FOF 3.4.5
================================================================================
+ Allow FEF Dark Mode to preload the files without applying the class
# [HIGH] IP filtering with CIDR or netmask notation may not work for certain IP address blocks

FOF 3.4.4
================================================================================
+ User action logs with multiple text entries are now allowed
+ In some cases, under CloudFlare, the real IP is only inside the X-CF-Connecting-Ip header, not X-Forwarded-For
+ Blade templates can now be debugged with phpStorm

FOF 3.4.3
================================================================================
+ Allow backend views to be cacheable
+ Allow per-user caching
+ Allow plugins to be triggered from the CLI
# [HIGH] Saving the component parameters did not clean Joomla's system cache

FOF 3.4.2
================================================================================
~ Improve site / admin detection by using isClient (J3.2+ syntax) instead of isAdmin
# [HIGH] The Akeeba common tables SQL is wrong, causing restoration errors on some UTF8MB4-enabled sites.
# [LOW] LayoutFile throws notices under PHP 7.3

FOF 3.4.1
================================================================================
+ Blade compiler can fall back to slower, less safe compilation when the PHP Tokenizer extension is disabled
+ Blade: extend() takes an optional argument (tag) to make it easier identifying already setup custom Blade compilers
+ loadAnyTemplate can optionally skip template overrides (useful for Blade template overrides which need to include the original file)